--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 .phpunit
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
+.idea
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
