--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,7 +18,17 @@ security:
             #http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
-            # form_login: true
+            form_login: true
+                check_path: security_login
+                login_path: security_login
+                csrf_token_generator: security.csrf.token_manager
+                default_target_path: micro_post_index
+                #always_use_default_target_path: true
+                #use_referer: true
+                #failure_path:
+            logout:
+                path: security_logout
+                target: micro_post_index
             # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
