--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,7 @@ services:
     App\Twig\AppExtenstion:
         arguments:
             $locale: '%locale%'
+
+    App\EventListener\LikeNotificationSubscriber:
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
