--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    email_from: '%env(MAILER_FROM)%'
 
 services:
     # default configuration for services in *this* file
@@ -33,6 +34,10 @@ services:
     App\Twig\AppExtenstion:
         arguments:
             $locale: '%locale%'
+
+    App\Mailer\Mailer:
+        arguments:
+            $mailFrom: '%email_from%'
 
     App\EventListener\LikeNotificationSubscriber:
         tags:
