--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/security-bundle": "*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "*",
+        "symfony/translation": "4.1.*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
