--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,3 +42,12 @@ services:
     App\EventListener\LikeNotificationSubscriber:
         tags:
             - { name: doctrine.event_subscriber, connection: default }
+
+    Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
+        arguments:
+            - !service { class: PDO, factory: 'database_connection:getWrappedConnection' }
+            - { lock_mode: 1 }
+
+    App\Event\LocaleSubscriber:
+        - arguments:
+            ['%kernel.default_locale']
