--- a/config/services.yaml
+++ b/config/services.yaml
@@ -50,4 +50,8 @@ services:
 
     App\Event\LocaleSubscriber:
         - arguments:
-            ['%kernel.default_locale']
+            '%kernel.default_locale%'
+
+    App\Event\UserSubscriber:
+        - arguments:
+              $defaultLocale: '%kernel.default_locale%'
