--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
+        "symfony/phpunit-bridge": "4.1.*",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
         "symfony/web-server-bundle": "*"
